デザイン修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,12 @@
 
   <body>
   <header class="p-3 mb-3 border-bottom">
-    <div class="col-md-12 text-end">
+    <div class="col-md-11 text-end">
+      <%= link_to '写真投稿', new_post_path, class: "btn btn-secondary" %> 
       <% if current_user %>
-        <%= link_to "Logout", :logout, method: :post,class: "btn btn-primary" %>
+        <%= link_to "Logout", :logout, method: :post,class: "btn btn-secondary" %>
       <% else %>
-        <%= link_to "Login", :login, class: "btn btn-primary" %>
+        <%= link_to "Login", :login, class: "btn btn-secondary" %>
       <% end %>
     </div>
   </header>
