--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,14 @@
-<div class="container mx-auto">
-  <%= link_to '写真投稿', new_post_path %>
-    <% @posts.each do |post|%>
-      <div class="card mx-auto", style="width: 18rem;">
-        <% if post.photo? %>
-          <%= image_tag post.photo.url, class: "bd-placeholder-img card-img-top", size: "200x200" %>
-        <% end %>
-        <div class="card-body">
-          <p class="card-text">
-            <%= post.description%>
-          </p>
-        </div>
+<div class="container">
+  <% @posts.each do |post|%>
+    <div class="card w-50 mx-auto m-5 rounded-0">
+      <% if post.photo? %>
+        <%= image_tag post.photo.url, class: "bd-placeholder-img card-img-top rounded-0" %>
+      <% end %>
+      <div class="card-body">
+        <p class="card-text">
+          <%= post.description%>
+        </p>
       </div>
-    <% end %>
+    </div>
+  <% end %>
 </div>
